fix: paths are sometimes matched incorrectly making specs fail
* added endpoint

* eindpoints work with regex

* updated the openapi file

* actually correct openapi.yml

* it actually seems to work (only the pattern matching does not take into account the required: false)

* $ref seems to work in all places

* cleanup

* cleaner

* path parameters cannot be empty

* removal of parent_schema

* small fix things->items

* cleanup openapi.yml

* tests don't break

* fixed tests and made the use of patterns in path matching optional

* fixed the example specs in bar_openapi

* changed version number

* gemfile was incorrect

* minor error to actually use the optional feature

* styling fixes

* forgot to actually make path parameters required (whoops)

* and the gemfile was incorrect

* pretty sure that the error was because the coverage was strict
now bar_spec is strict
baz_spec is report
and rspec (the one that is run at a PR) is strict

* version reset
