# examples/test_app.rb
@@ -5,6 +5,20 @@ require "json"
 
 module TestApp
   def self.[](value)
+    items = [
+      {"foo" => value},
+      {"foo" => "qux"},
+      {"foo" => "quux"},
+      {"foo" => "corge"},
+      {"foo" => "grault"},
+      {"foo" => "garply"},
+      {"foo" => "waldo"},
+      {"foo" => "fred"},
+      {"foo" => "plugh"},
+      {"foo" => "xyzzy"},
+      {"foo" => "thud"}
+    ]
+
     Sinatra.new do
       get "/" do
         content_type :json
@@ -20,6 +34,24 @@ module TestApp
         else
           status 400
           JSON.generate({"message" => "foo must be #{value}"})
+        end
+      end
+
+      get "/items" do
+        content_type :json
+        JSON.generate(items)
+      end
+
+      get(/\/items\/(\d+)/) do |id|
+        content_type :json
+        JSON.generate(items[id.to_i])
+      end
+
+      get(/\/items\/first5((\.(xml|json))?)/) do
+        format = params["captures"]
+        if format != ".xml"
+          content_type :json
+          JSON.generate(items[0..4])
         end
       end
     end
